--- a/.devops/disaster-recovery.yml
+++ b/.devops/disaster-recovery.yml
@@ -3,20 +3,6 @@ trigger: none
 pr: none
 
 parameters:
-  - name: 'DEV'
-    displayName: 'Run on DEV environment'
-    type: boolean
-    default: True
-    values:
-      - False
-      - True
-  - name: 'UAT'
-    displayName: 'Run on UAT environment'
-    type: boolean
-    default: True
-    values:
-      - False
-      - True
   - name: 'PROD'
     displayName: 'Run on PROD environment'
     type: boolean
@@ -29,12 +15,8 @@ variables:
   TIME_OUT: 10
   # working dir
   WORKING_DIR: 'src'
-  poolNameDev: '$(TF_POOL_NAME_DEV)'
-  poolNameUat: '$(TF_POOL_NAME_UAT)'
   poolNameProd: '$(TF_POOL_NAME_PROD)'
   #APPLY
-  azureServiceConnectionApplyNameDev: '$(TF_AZURE_SERVICE_CONNECTION_APPLY_NAME_DEV)'
-  azureServiceConnectionApplyNameUat: '$(TF_AZURE_SERVICE_CONNECTION_APPLY_NAME_UAT)'
   azureServiceConnectionApplyNameProd: '$(TF_AZURE_SERVICE_CONNECTION_APPLY_NAME_PROD)'
 
 
@@ -46,17 +28,17 @@ resources:
     - repository: terraform
       type: github
       name: pagopa/azure-pipeline-templates
-      ref: postgres-failover
+      ref: refs/heads/main
       endpoint: "io-azure-devops-github-ro"
 
 
 stages:
-  - stage: DEV
-    displayName: Disaster recovery DEV
+  - stage: PROD
+    displayName: Disaster recovery PROD
     dependsOn: []
-    condition: and(succeeded(), eq(${{parameters.DEV}}, true))
+    condition: and(succeeded(), eq(${{parameters.PROD}}, true))
     pool:
-      name: "${{variables.poolNameDev}}"
+      name: "${{variables.poolNameProd}}"
     jobs:
       - job: postgres_fdr_failover
         displayName: FDR postgres flexible failover
@@ -66,62 +48,40 @@ stages:
         steps:
           - template: templates/postgres-flexible-failover/template.yaml@terraform
             parameters:
-              PRIVATE_DNS_ZONE_NAME: "d.internal.postgresql.pagopa.it"
-              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-d-vnet-rg"
-              PRIVATE_DNS_ZONE_RECORD_NAME: "nodo-db"
-              FAILOVER_DB_RG: "pagopa-d-weu-nodo-db-rg"
-              FAILOVER_DB_NAME: "pagopa-d-neu-nodo-replica3"
+              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+              PRIVATE_DNS_ZONE_RECORD_NAME: "fdr-db"
+              FAILOVER_DB_RG: "pagopa-p-weu-fdr-db-rg"
+              FAILOVER_DB_NAME: "pagopa-p-neu-fdr-pgflex"
               WORKINGDIR: ${{ variables.WORKING_DIR }}
-              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameDev}}"
-#  - stage: PROD
-#    displayName: Disaster recovery PROD
-#    dependsOn: []
-#    condition: and(succeeded(), eq(${{parameters.PROD}}, true))
-#    pool:
-#      name: "${{variables.poolNameProd}}"
-#    jobs:
-#      - job: postgres_fdr_failover
-#        displayName: FDR postgres flexible failover
-#        strategy:
-#          parallel: 1
-#        timeoutInMinutes: $[variables.TIME_OUT]
-#        steps:
-#          - template: templates/postgres-flexible-failover/template.yaml@terraform
-#            parameters:
-#              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-#              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-#              PRIVATE_DNS_ZONE_RECORD_NAME: "fdr-db"
-#              FAILOVER_DB_RG: "pagopa-p-weu-fdr-db-rg"
-#              FAILOVER_DB_NAME: "pagopa-p-neu-fdr-pgflex"
-#              WORKINGDIR: ${{ variables.WORKING_DIR }}
-#              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
-#      - job: postgres_gpd_failover
-#        displayName: GPD/GPS postgres flexible failover
-#        strategy:
-#          parallel: 1
-#        timeoutInMinutes: $[variables.TIME_OUT]
-#        steps:
-#          - template: templates/postgres-flexible-failover/template.yaml@terraform
-#            parameters:
-#              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-#              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-#              PRIVATE_DNS_ZONE_RECORD_NAME: "gpd-db"
-#              FAILOVER_DB_RG: "pagopa-p-pgres-flex-rg"
-#              FAILOVER_DB_NAME: "pagopa-p-neu-gps-pgflex"
-#              WORKINGDIR: ${{ variables.WORKING_DIR }}
-#              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
-#      - job: postgres_nodo_failover
-#        displayName: Nodo postgres flexible failover
-#        strategy:
-#          parallel: 1
-#        timeoutInMinutes: $[variables.TIME_OUT]
-#        steps:
-#          - template: templates/postgres-flexible-failover/template.yaml@terraform
-#            parameters:
-#              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-#              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-#              PRIVATE_DNS_ZONE_RECORD_NAME: "nodo-db"
-#              FAILOVER_DB_RG: "pagopa-p-weu-nodo-db-rg"
-#              FAILOVER_DB_NAME: "pagopa-p-neu-nodo-flexible-postgresql"
-#              WORKINGDIR: ${{ variables.WORKING_DIR }}
-#              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+      - job: postgres_gpd_failover
+        displayName: GPD/GPS postgres flexible failover
+        strategy:
+          parallel: 1
+        timeoutInMinutes: $[variables.TIME_OUT]
+        steps:
+          - template: templates/postgres-flexible-failover/template.yaml@terraform
+            parameters:
+              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+              PRIVATE_DNS_ZONE_RECORD_NAME: "gpd-db"
+              FAILOVER_DB_RG: "pagopa-p-pgres-flex-rg"
+              FAILOVER_DB_NAME: "pagopa-p-neu-gps-pgflex"
+              WORKINGDIR: ${{ variables.WORKING_DIR }}
+              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+      - job: postgres_nodo_failover
+        displayName: Nodo postgres flexible failover
+        strategy:
+          parallel: 1
+        timeoutInMinutes: $[variables.TIME_OUT]
+        steps:
+          - template: templates/postgres-flexible-failover/template.yaml@terraform
+            parameters:
+              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+              PRIVATE_DNS_ZONE_RECORD_NAME: "nodo-db"
+              FAILOVER_DB_RG: "pagopa-p-weu-nodo-db-rg"
+              FAILOVER_DB_NAME: "pagopa-p-neu-nodo-flexible-postgresql"
+              WORKINGDIR: ${{ variables.WORKING_DIR }}
+              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
